fix for message wrap

--- a/client/src/sass/_chatroomLayout.scss
+++ b/client/src/sass/_chatroomLayout.scss
@@ -19,8 +19,9 @@
   font-size: 1.7rem;
 
   &__message {
-    width: 60vw;
+    width: 100%;
     word-wrap: break-word;
+    
 
     &--userMessage {
       color: gray;
